@@ -2,13 +2,13 @@ if CONFIG_X86
 ARCHDIR = x86
 endif
 
-if CONFIG_I386
-ARCHDIR = i386
-endif
+#if CONFIG_I386
+#ARCHDIR = i386
+#endif
 
-if CONFIG_X86_64
-ARCHDIR = x86_64
-endif
+#if CONFIG_X86_64
+#ARCHDIR = x86_64
+#endif
 
 if CONFIG_ARM
 ARCHDIR = arm
