@@ -2,13 +2,13 @@ if CONFIG_X86
 ARCHDIR = asm-x86
 endif
 
-if CONFIG_I386
-ARCHDIR = asm-i386
-endif
+#if CONFIG_I386
+#ARCHDIR = asm-i386
+#endif
 
-if CONFIG_X86_64
-ARCHDIR = asm-x86_64
-endif
+#if CONFIG_X86_64
+#ARCHDIR = asm-x86_64
+#endif
 
 if CONFIG_ARM
 ARCHDIR = asm-arm
