@@ -87,7 +87,7 @@ AM_RECURSIVE_TARGETS = $(RECURSIVE_TARGETS:-recursive=) \
 	distdir
 ETAGS = etags
 CTAGS = ctags
-DIST_SUBDIRS = asm-arm asm-i386 asm-m68k asm-ppc asm-x86_64 asm-x86
+DIST_SUBDIRS = asm-arm asm-m68k asm-ppc asm-x86
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 am__relativize = \
   dir0=`pwd`; \
@@ -291,12 +291,18 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+
+#if CONFIG_I386
+#ARCHDIR = asm-i386
+#endif
+
+#if CONFIG_X86_64
+#ARCHDIR = asm-x86_64
+#endif
 @CONFIG_ARM_TRUE@ARCHDIR = asm-arm
-@CONFIG_I386_TRUE@ARCHDIR = asm-i386
 @CONFIG_M68KNOMMU_TRUE@ARCHDIR = asm-m68k
 @CONFIG_M68K_TRUE@ARCHDIR = asm-m68k
 @CONFIG_PPC_TRUE@ARCHDIR = asm-ppc
-@CONFIG_X86_64_TRUE@ARCHDIR = asm-x86_64
 @CONFIG_X86_TRUE@ARCHDIR = asm-x86
 nobase_include_HEADERS = \
 		rtai.h \
